# chango

./: .pre-commit-config.yaml  .readthedocs.yaml  README.rst  action.js  action.yml  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: create_chango_fragment.yml  doc_build_test.yml  gha_security.yml  release_pypi.yml  release_test_pypi.yml  type_completeness_test.yml  unit_tests.yml
changes/: CHANGES.rst  config.py
changes/unreleased/: 0027.ecT22x2M7ejRkmAmN3oUM3.rst  0028.bDcVpeXEhLeVXFfNBQx2rr.rst  0028.bbYDowUgFJLq29mAH5yHWW.rst  0029.4M2mRZnKZV2uuAhV7nUavP.rst  0038.5PGfDhN6AHYn652rJL9zsG.rst  0047.P4PDLHhrhTpFLoEGpqF6mn.rst  0050.78w8iun5XJkC2HpvtUrAG2.rst  0050.gsFMf9jenCg2UyejU4maMv.rst  0051.GrSNQT2zPGU8kTssjJ7PQP.rst  0064.TcBysgmjU9HuXcCNtAmXnp.toml  0066.GHbC3w7f2XSbFDmuVnDd6v.toml  0068.GRvFbeQfEDdmzxGJPiz2w4.toml  0069.iKyCZ4ajCBQ6AFsCqPxWkA.toml  0070.SoA9kPB4HQsbXfQtzbm4VS.toml  0072.DzvfYPwDzGFU6SMMuSt6Ds.toml  0073.RE4dFqzYC3aR9qvmVZv9og.toml  0074.SSDViauEeBT7QHKRH6mFpc.toml  0075.JvzRqLCRaUSopaa8N8hgGM.toml  0076.eoGQRL4t4dv9NiRcsMcJNb.toml  0077.KHDp4yxBonQGJMNkv8VUCk.toml  0078.ivKibdXUti2zxb2YPvDZVE.toml  0079.Es29xTh5JD8tpRzfAsfXLp.toml  0080.dyisXUTQu334rBnzvcFw86.toml  0081.eBzeTtXcD5VayQakSxYf4K.toml  0082.Xex5NDu9UvfoTPMdtWAyyf.toml  0083.5hTSdpXcfJSq8NGehybcyE.toml  0084.Q2soqnTqBjpdDCcosyRLJw.toml  0085.DnuHKLjMEHRjt9YJsGkdJ8.toml  0086.jSgwmus5gumz56ApSeCgSb.toml  0087.U8AxZuKzxyCEHeizBWsVJq.toml  0088.2fQMEbF5EypoUZEGvJfVzH.toml  0089.mZsvnLwQtAfi89UWuUWJwa.toml  0090.ghFvSABn3u3QQ8zSYvmN5v.toml  0091.4R9M49m56xiQcZo7NESjKi.toml  0092.dMTV9TeXd6WFBD3FqW6xHC.toml  0093.RT9fNQwRmEYWqKaTGXUkC5.toml  0094.HqLh2XekPzCa6CtfiaemH2.toml  0095.jhG3K7sbRsjJvdvbHDsMx2.toml  0096.Y82ibb5y77Xa38xdk6QVC5.toml  0096.b8uWYQBkFmescukZHQJX8K.toml  (+51 more)
chango/: __init__.py  _changenoteinfo.py  _version.py  constants.py  errors.py  helpers.py
chango/_cli/: __init__.py  __main__.py  edit.py  new.py  release.py  report.py
chango/_utils/: filename.py  types.py
chango/abc/: __init__.py  _changenote.py  _io.py  _versionhistory.py  _versionnote.py  _versionscanner.py
chango/cli/: __main__.py
chango/concrete/: __init__.py  _commentchangenote.py  _directoryio.py  (+3 more)
docs/: requirements-docs.txt
tests/: test_action.py  test_constants.py  test_dummy.py
(+112 files in other folders)
